--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,12 +12,11 @@
   <script src="lib/jasmine-3.3.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
+  <script src="src/Thermo.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+  <script src="spec/ThermoSpec.js"></script>
+
 
 </head>
 
