--- a/index.html
+++ b/index.html
@@ -23,22 +23,30 @@
       $('#temperature').text(thermostat.temperature());
     });
 
+    $('#clear').click(function(){
+      thermostat.reset();
+      $('#temperature').text(thermostat.temperature());
+    });
+
     var clicks = 0;
 
     $('#customSwitch1').click(function(){
-
       if (clicks % 2 == 0) {
         thermostat.powersaving_off();
         clicks += 1;
         console.log(clicks);
       } else {
-        thermostat.def_temp = 20;
+        thermostat.def_temp = 25;
         $('#temperature').text(thermostat.temperature());
         thermostat.powersaving_on();
         clicks += 1;
         console.log(clicks);
       };
     });
+
+
+
+
 
   });
   </script>
@@ -48,7 +56,7 @@
       <div class="col-md-4 mx-auto">
         <h2 style="color: black; padding: 1px;"><b>THERMOSTAT</b></h2>
         <button id="plus" type="button" class="btn btn-primary">+</button>
-        <button type="button" class="btn btn-outline-danger" style="margin: 3px;">Reset</button>
+        <button id="clear" type="button" class="btn btn-outline-danger" style="margin: 3px;">Reset</button>
         <button type="button" class="btn btn-primary">Usage</button>
         <button id="minus" type="button" class="btn btn-primary">-</button>
         <div class="card" style="max-width: 14rem; height: 10rem;">
